@@ -3,4 +3,6 @@ Release 1.0:
 - First release ever.
 
 Release 1.1:
+- Innerdiffs (the differences inside a change-delta).
+  Are now diffed as words instead as characters. (more human-readable)
 
